--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alexei Sager Portfolio</title>
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> Change to my icon later-->
+    <title>Alexei Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
